toast wrapping fix

--- a/src/less/system-alerts.less
+++ b/src/less/system-alerts.less
@@ -92,6 +92,7 @@
   text-decoration: underline;
 
   &:hover {
+    color: currentColor;
     text-decoration: underline;
   }
 }
